--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chroma-js": "^3.1.2",
     "maplibre-gl": "^5.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
