--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "colorbar-creator",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "chroma-js": "^3.1.2",
-    "maplibre-gl": "^5.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-map-gl": "^8.0.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
-  }
+	"name": "colorbar-creator",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"chroma-js": "^3.1.2",
+		"d3": "~7.9.0",
+		"deck.gl": "~9.0.33",
+		"desi-graphics": "^1.0.5",
+		"lodash": "~4.17.21",
+		"maplibre-gl": "~4.7.1",
+		"proj4": "~2.12.1",
+		"react": "~18.3.1",
+		"react-dom": "~18.3.1",
+		"react-icons": "^5.5.0",
+		"react-map-gl": "~7.1.7"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.22.0",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.22.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"vite": "^6.3.1"
+	}
 }
